--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
     sdk: flutter
   
   ## Icons packages
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.6
   iconsax: ^0.0.8
 
 
@@ -26,7 +26,8 @@ dependencies:
   connectivity_plus: ^5.0.2
 
   ## State management
-  get: ^4.6.6
+  
+  flutter_bloc: ^8.1.3
   get_storage: ^2.1.1
   firebase_storage: ^11.5.6
 
@@ -37,13 +38,11 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
 
 
 flutter:
-
   uses-material-design: true
-  
   ## ################ LOCAL Assets ################ ##
   assets:
     - assets/logos/
