--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,11 @@ dependencies:
   
   flutter_bloc: ^8.1.3
   get_storage: ^2.1.1
+
+  ## Firebase Packages
   firebase_storage: ^11.5.6
+  firebase_core: ^2.24.2
+  firebase_auth: ^4.15.3
 
   ## Product Specific
 
