--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,16 +24,21 @@ dependencies:
   logger: ^2.0.2+1
   url_launcher: ^6.2.2
   connectivity_plus: ^5.0.2
+  get_storage: ^2.1.1
 
   ## State management
   
   flutter_bloc: ^8.1.3
-  get_storage: ^2.1.1
+  get_it: ^7.6.4
 
   ## Firebase Packages
   firebase_core: ^2.24.2
-  firebase_storage: ^11.5.6
-  firebase_auth: ^4.15.3
+  firebase_storage: ^11.6.0
+  firebase_auth: ^4.16.0
+  google_sign_in: ^6.2.1
+  cloud_firestore: ^4.14.0
+  freezed_annotation: ^2.4.1
+  json_annotation: ^4.8.1
 
   ## Product Specific
 
@@ -43,6 +48,11 @@ dev_dependencies:
     sdk: flutter
 
   flutter_lints: ^3.0.1
+  build_runner: ^2.4.7
+  freezed: ^2.4.6
+  json_serializable: ^6.7.1
+  bloc_test: ^9.1.5
+  mockito: ^5.4.4
 
 
 flutter:
