--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   cloud_firestore: ^4.14.0
   freezed_annotation: ^2.4.1
   json_annotation: ^4.8.1
+  lottie: ^2.7.0
 
   ## Product Specific
 
