--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,62 +1,57 @@
 name: e_store
 description: "A new Flutter project."
 
-publish_to: 'none' 
+publish_to: "none"
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.2.2 <4.0.0'
-
+  sdk: ">=3.2.2 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  
+
   ## Icons packages
   cupertino_icons: ^1.0.6
   iconsax: ^0.0.8
 
-
-
   ## Utility Packages
-  http: ^1.1.2
+  http: ^1.2.0
   intl: ^0.19.0
   logger: ^2.0.2+1
-  url_launcher: ^6.2.3
+  url_launcher: ^6.2.4
   connectivity_plus: ^5.0.2
   get_storage: ^2.1.1
-  lottie: ^2.7.0
+  lottie: ^3.0.0
 
   ## State management
-  
-  flutter_bloc: ^8.1.3
-  get_it: ^7.6.6
+
+  flutter_bloc: ^8.1.4
+  get_it: ^7.6.7
 
   ## Firebase Packages
-  firebase_core: ^2.24.2
-  firebase_storage: ^11.6.0
-  firebase_auth: ^4.16.0
-  cloud_firestore: ^4.14.0
+  firebase_core: ^2.25.4
+  firebase_storage: ^11.6.5
+  firebase_auth: ^4.17.4
+  cloud_firestore: ^4.15.4
   google_sign_in: ^6.2.1
 
-  #Generator Packages 
+  #Generator Packages
   freezed_annotation: ^2.4.1
   json_annotation: ^4.8.1
 
   ## Product Specific
-
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^3.0.1
-  build_runner: ^2.4.7
-  freezed: ^2.4.6
+  build_runner: ^2.4.8
+  freezed: ^2.4.7
   json_serializable: ^6.7.1
-  bloc_test: ^9.1.5
+  bloc_test: ^9.1.6
   mockito: ^5.4.4
-
 
 flutter:
   uses-material-design: true
@@ -72,7 +67,7 @@ flutter:
     - assets/images/animations/
     - assets/icons/payment_methods/
     - assets/images/on_boarding_images/
-  
+
   ## ################ LOCAL Fonts ################ ##
   fonts:
     - family: Poppins
@@ -92,29 +87,3 @@ flutter:
           weight: 600
         - asset: assets/fonts/Poppins-Bold.ttf
           weight: 800
-
-  
-  
-
-  
-  
-
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
