--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ publish_to: "none"
 version: 1.0.0+1
 
 environment:
-  sdk: ">=3.2.2 <4.0.0"
+  sdk: ">=3.3.3 <4.0.0"
 
 dependencies:
   flutter:
@@ -16,25 +16,26 @@ dependencies:
   iconsax: ^0.0.8
 
   ## Utility Packages
-  http: ^1.2.0
+  http: ^1.2.1
   intl: ^0.19.0
-  logger: ^2.0.2+1
-  url_launcher: ^6.2.4
-  connectivity_plus: ^5.0.2
+  logger: ^2.2.0
+  url_launcher: ^6.2.5
+  connectivity_plus: ^6.0.1
   get_storage: ^2.1.1
-  lottie: ^3.0.0
+  lottie: ^3.1.0
 
   ## State management
 
-  flutter_bloc: ^8.1.4
-  get_it: ^7.6.7
+  flutter_bloc: ^8.1.5
+  get_it: ^7.6.8
 
   ## Firebase Packages
-  firebase_core: ^2.25.4
-  firebase_storage: ^11.6.5
-  firebase_auth: ^4.17.4
-  cloud_firestore: ^4.15.4
+  firebase_core: ^2.28.0
+  firebase_storage: ^11.7.0
+  firebase_auth: ^4.19.0
+  cloud_firestore: ^4.16.0
   google_sign_in: ^6.2.1
+  # google_sign_in_web: ^0.12.4 //TODO web support
 
   #Generator Packages
   freezed_annotation: ^2.4.1
@@ -46,11 +47,11 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^3.0.1
-  build_runner: ^2.4.8
-  freezed: ^2.4.7
+  flutter_lints: ^3.0.2
+  build_runner: ^2.4.9
+  freezed: ^2.5.1
   json_serializable: ^6.7.1
-  bloc_test: ^9.1.6
+  bloc_test: ^9.1.7
   mockito: ^5.4.4
 
 flutter:
