--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,18 +30,19 @@ dependencies:
   get_it: ^7.7.0
 
   ## Firebase Packages
-  firebase_core: ^2.30.1
-  firebase_storage: ^11.7.4
-  firebase_auth: ^4.19.4
-  cloud_firestore: ^4.17.2
+  firebase_core: ^2.31.0
+  firebase_storage: ^11.7.5
+  firebase_auth: ^4.19.5
+  cloud_firestore: ^4.17.3
   google_sign_in: ^6.2.1
   # google_sign_in_web: ^0.12.4 //TODO web support
 
   #Generator Packages
   freezed_annotation: ^2.4.1
-  json_annotation: ^4.8.1
+  json_annotation: ^4.9.0
 
   ## Product Specific
+  readmore: ^3.0.0
 
 dev_dependencies:
   flutter_test:
@@ -50,7 +51,7 @@ dev_dependencies:
   flutter_lints: ^3.0.2
   build_runner: ^2.4.9
   freezed: ^2.5.2
-  json_serializable: ^6.7.1
+  json_serializable: ^6.8.0
   bloc_test: ^9.1.7
   mockito: ^5.4.4
 
