--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,7 @@ dependencies:
   logger: ^2.3.0
   url_launcher: ^6.2.6
   connectivity_plus: ^6.0.3
-  get_storage: ^2.1.1
+  shared_preferences: ^2.2.3
   lottie: ^3.1.1
 
   ## State management
