--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,7 @@ dependencies:
   url_launcher: ^6.2.6
   connectivity_plus: ^6.0.3
   shared_preferences: ^2.2.3
-  lottie: ^3.1.1
+  lottie: ^3.1.2
 
   ## State management
 
@@ -50,11 +50,11 @@ dev_dependencies:
     sdk: flutter
 
   flutter_lints: ^4.0.0
-  build_runner: ^2.4.9
+  build_runner: ^2.4.10
   freezed: ^2.5.2
   json_serializable: ^6.8.0
   bloc_test: ^9.1.7
-  mockito: ^5.4.4
+  mocktail: ^1.0.3
 
 flutter:
   uses-material-design: true
